<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandActivity">

    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/land_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title" />

        <TextView
            android:id="@+id/land_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/land_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_no_account_instructions" />

        <Button
            android:id="@+id/land_add_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_add_account_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>