<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_about_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_layout_margin">

        <TextView
            android:id="@+id/about_version_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/about_version_title"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_version_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version_name_display"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_marginStart="@dimen/margin_xsmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_version_title"
            app:layout_constraintTop_toBottomOf="@+id/about_version_title" />

        <TextView
            android:id="@+id/about_version_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version_code_display"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_version_name"
            app:layout_constraintTop_toBottomOf="@+id/about_version_name" />

        <TextView
            android:id="@+id/about_version_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version_date_display"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_version_name"
            app:layout_constraintTop_toBottomOf="@+id/about_version_code" />

        <TextView
            android:id="@+id/about_copyright_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/copyright_string"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_version_name"
            app:layout_constraintTop_toBottomOf="@+id/about_version_date" />

        <TextView
            android:id="@+id/about_trademark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_page_copyright"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_version_name"
            app:layout_constraintTop_toBottomOf="@+id/about_copyright_date" />

        <Button
            android:id="@+id/main_website_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/main_website"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_trademark" />

        <TextView
            android:id="@+id/about_help_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/about_help_title"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_website_button" />

        <TextView
            android:id="@+id/get_support_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_page_get_help"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_marginStart="@dimen/margin_xsmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_help_title"
            app:layout_constraintTop_toBottomOf="@+id/about_help_title" />

        <Button
            android:id="@+id/send_support_mail_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin"
            android:text="@string/help_button_support"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_support_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
